fix dropdown z-index

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5762,7 +5762,7 @@ footer .footer-drop-links i {
           flex-direction: column;
           background-color: #fff;
           border: 1px solid #D9D9D9;
-          z-index: 100;
+          z-index: 90;
           border-radius: 8px;
           min-width: 300px;
           box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.06);
@@ -5787,7 +5787,7 @@ footer .footer-drop-links i {
           }
           .dropdown_item {
             position: relative;
-            z-index: 100;
+            z-index: 90;
             i {
               opacity: 0;
               color: $sy-blue;
